force-app/main/default/objects/Reference_S125_Onboarding__c/Reference_S125_Onboarding__c.object-meta.xml
<CustomObject>
    <description>This object will store the information to onboard S125 clients.</description>
    <label>Reference S125 Onboarding</label>
    <nameField>
        <displayFormat>Ref S125 - {0000}</displayFormat>
        <label>Reference S125 Onboarding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference S125 Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>