force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Admin_Access__c.field-meta.xml
<CustomField>
    <fullName>Admin_Access__c</fullName>
    <description>This field displays if they have FSA administrative access granted or not.</description>
    <label>Admin Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Granted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>