force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Cancel_Request_Received__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request_Received__c</fullName>
    <description>This is the date the client requested to cancel the plan.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancel Request Received</label>
    <type>Date</type>
</CustomField>