force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Carryover__c.field-meta.xml
<CustomField>
    <fullName>Carryover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field shows if the client has carryover for FSA.</description>
    <label>Carryover</label>
    <type>Checkbox</type>
</CustomField>