force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Case that created this Reference object.</description>
    <label>Case Lookup</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference S125 Onboardings</relationshipLabel>
    <relationshipName>Reference_S125_Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>