force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Check_Signing__c.field-meta.xml
<CustomField>
    <fullName>Check_Signing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selected if the client has signed up for check signing with their FSA.</description>
    <label>Check Signing</label>
    <type>Checkbox</type>
</CustomField>