force-app/main/default/objects/Reference_S125_Onboarding__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>District from the Sales Rep&apos;s user record.</description>
    <formula>Sales_Rep__r.District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>