force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Final_Compliance_Test__c.field-meta.xml
<CustomField>
    <fullName>Final_Compliance_Test__c</fullName>
    <description>This is the date the final compliance test is run.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Compliance Test</label>
    <type>Date</type>
</CustomField>