force-app/main/default/objects/Reference_S125_Onboarding__c/fields/First_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Check_Date__c</fullName>
    <description>This is the date of the first check that will have deductions taken on.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Check Date</label>
    <type>Date</type>
</CustomField>