force-app/main/default/objects/Reference_S125_Onboarding__c/fields/P_Account__c.field-meta.xml
<CustomField>
    <fullName>P_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P-Account</label>
    <type>Checkbox</type>
</CustomField>