force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Effective_Date__c</fullName>
    <description>The date the plan is effective.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Effective Date</label>
    <type>Date</type>
</CustomField>