force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Plan_Push__c.field-meta.xml
<CustomField>
    <fullName>Plan_Push__c</fullName>
    <description>The date when the plan effective date has been moved to a later date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Push</label>
    <type>Date</type>
</CustomField>