force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Plan_Push_Reason__c.field-meta.xml
<CustomField>
    <fullName>Plan_Push_Reason__c</fullName>
    <description>The date the plan effective date was pushed.</description>
    <label>Plan Push Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Request</fullName>
            </value>
            <value>
                <fullName>Delayed Advantage Set up</fullName>
            </value>
            <value>
                <fullName>Hasn&apos;t split to ASO</fullName>
            </value>
            <value>
                <fullName>MMS Validation not received timely</fullName>
            </value>
            <value>
                <fullName>Push after discrepancy resolution</fullName>
            </value>
            <value>
                <fullName>Push at activation due to timeframes</fullName>
            </value>
            <value>
                <fullName>Other (detail in notes)</fullName>
                <isActive>false</isActive>
                <label>Other (detail in notes)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>