force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Sales_Rep_Title__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Title__c</fullName>
    <formula>Sales_Rep__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Title</label>
    <type>Text</type>
</CustomField>