force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Setup_Delay_Notes__c.field-meta.xml
<CustomField>
    <fullName>Setup_Delay_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Setup Delay Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>