force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Split_Delete_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Split_Delete_End_Date__c</fullName>
    <description>The date the move to ASO platform is completed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Split/Delete End Date</label>
    <type>Date</type>
</CustomField>