force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Total_1st_Level_Discrepancies__c.field-meta.xml
<CustomField>
    <fullName>Total_1st_Level_Discrepancies__c</fullName>
    <description>This is the count of S125 Discrepancies with the type of &quot;First Discrepancy&quot;. These discrepancies will hault the onboarding process.</description>
    <label>Total 1st Level Discrepancies</label>
    <summaryFilterItems>
        <field>S125_Discrepancy__c.Discrepancy_Resolution_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>S125_Discrepancy__c.Discrepancy_Type__c</field>
        <operation>equals</operation>
        <value>First Discrepancy</value>
    </summaryFilterItems>
    <summaryForeignKey>S125_Discrepancy__c.Reference_S125_Onboarding__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>