force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Verified_Plan_Initialized_at_E1__c.field-meta.xml
<CustomField>
    <fullName>Verified_Plan_Initialized_at_E1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is for Phase 1 plans only</inlineHelpText>
    <label>Verified Plan Initialized at E1</label>
    <type>Date</type>
</CustomField>