force-app/main/default/objects/Reference_S125_Onboarding__c/fields/Welcome_Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Package_Sent__c</fullName>
    <description>The date the welcome package was sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Welcome Package Sent</label>
    <type>Date</type>
</CustomField>