force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/Manual_Setup_Required_must_be_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Manual_Setup_Required_must_be_today</fullName>
    <active>true</active>
    <description>You must enter today&apos;s date in the Manual Setup Required field.
Once a date has been entered, it cannot be changed.</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt;&quot;2008-09 Operations Administration&quot;,ISCHANGED( Manual_Setup_Required__c ), IF( NOT(ISBLANK(PRIORVALUE(Manual_Setup_Required__c))), true, IF(NOT(Manual_Setup_Required__c = TODAY()), true, false) ))</errorConditionFormula>
    <errorMessage>You must enter today&apos;s date in the Manual Setup Required field.
Once a date has been entered, it cannot be changed.</errorMessage>
</ValidationRule>