force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/populate_Activation_Complete_first.validationRule-meta.xml
<ValidationRule>
    <fullName>populate_Activation_Complete_first</fullName>
    <active>true</active>
    <description>Activation Complete must be populated to enter a date in for Verified EE Detail to WEX.</description>
    <errorConditionFormula>ISBLANK(PRIORVALUE( Verified_EE_Detail_to_WEX__c ) ) &amp;&amp;
NOT(ISBLANK(Verified_EE_Detail_to_WEX__c )) &amp;&amp;
ISBLANK(Activation_Complete__c )</errorConditionFormula>
    <errorMessage>You must enter a date in Activation Complete first.</errorMessage>
</ValidationRule>