force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/populate_Final_Compliance_Test_first.validationRule-meta.xml
<ValidationRule>
    <fullName>populate_Final_Compliance_Test_first</fullName>
    <active>true</active>
    <description>Must enter a date in Final Compliance Test first.</description>
    <errorConditionFormula>ISBLANK(PRIORVALUE( Payroll_Verified__c  ) ) &amp;&amp; 
NOT(ISBLANK(Payroll_Verified__c  )) &amp;&amp; 
ISBLANK( Final_Compliance_Test__c )</errorConditionFormula>
    <errorMessage>You must enter a date in Final Compliance Test first.</errorMessage>
</ValidationRule>