force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/populate_rdy_to_audit_payroll_verified.validationRule-meta.xml
<ValidationRule>
    <fullName>populate_rdy_to_audit_payroll_verified</fullName>
    <active>true</active>
    <description>Must enter a date in Ready to Audit and Payroll Verified first.</description>
    <errorConditionFormula>ISBLANK(PRIORVALUE( Setup_Complete_Date__c  ) ) &amp;&amp; 
NOT(ISBLANK(Setup_Complete_Date__c  )) &amp;&amp; 
OR(ISBLANK( Ready_to_Audit__c ),ISBLANK( Payroll_Verified__c ) )</errorConditionFormula>
    <errorMessage>You must enter a date in Ready to Audit and Payroll Verified first.</errorMessage>
</ValidationRule>