force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/populate_Reviewed_Plan_Details_first.validationRule-meta.xml
<ValidationRule>
    <fullName>populate_Reviewed_Plan_Details_first</fullName>
    <active>true</active>
    <description>Reviewed Plan Details field must be populated to enter a date for Activation Complete</description>
    <errorConditionFormula>ISBLANK(PRIORVALUE( Activation_Complete__c )) &amp;&amp;
NOT(ISBLANK(Activation_Complete__c )) &amp;&amp;
ISBLANK(Reviewed_Plan_Details__c )</errorConditionFormula>
    <errorMessage>You must enter a date in Reviewed Plan Details first.</errorMessage>
</ValidationRule>