force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/populate_Verified_EE_Detail_to_WEX.validationRule-meta.xml
<ValidationRule>
    <fullName>populate_Verified_EE_Detail_to_WEX</fullName>
    <active>true</active>
    <description>Must enter a date in Verified EE Detail to WEX first.</description>
    <errorConditionFormula>ISBLANK(PRIORVALUE(  Ready_to_Audit__c ) ) &amp;&amp; 
NOT(ISBLANK(Ready_to_Audit__c )) &amp;&amp; 
ISBLANK(Verified_EE_Detail_to_WEX__c )</errorConditionFormula>
    <errorMessage>You must enter a date in Verified EE Detail to WEX first.</errorMessage>
</ValidationRule>