force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/Ready_to_Audit_must_be_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_to_Audit_must_be_today</fullName>
    <active>true</active>
    <description>You must enter today&apos;s date in Ready to Audit field. 
Once a date has been entered, it cannot be changed.</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt;&quot;2008-09 Operations Administration&quot;,ISCHANGED(Ready_to_Audit__c ), IF( NOT(ISBLANK(PRIORVALUE(Ready_to_Audit__c ))), true, IF(NOT(Ready_to_Audit__c = TODAY()), true, false) ))</errorConditionFormula>
    <errorMessage>You must enter today&apos;s date in Ready to Audit field. 
Once a date has been entered, it cannot be changed.</errorMessage>
</ValidationRule>