force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/Reviewed_Plan_Details_must_be_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Reviewed_Plan_Details_must_be_today</fullName>
    <active>true</active>
    <description>Must enter today&apos;s date in Reviewed Plan Details field.
Once a date has been entered, it cannot be changed.</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt;&quot;2008-09 Operations Administration&quot;,ISCHANGED(Reviewed_Plan_Details__c), IF(  NOT(ISBLANK(PRIORVALUE(Reviewed_Plan_Details__c))), true,  IF(NOT(Reviewed_Plan_Details__c = TODAY()), true, false) ))</errorConditionFormula>
    <errorMessage>You must enter today&apos;s date in Reviewed Plan Details field.
Once a date has been entered, it cannot be changed.</errorMessage>
</ValidationRule>