force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/Setup_Complete_Date_must_be_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Setup_Complete_Date_must_be_today</fullName>
    <active>true</active>
    <description>You must enter today&apos;s date in Setup Complete Date field. 
Once a date has been entered, it cannot be changed.</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt;&quot;2008-09 Operations Administration&quot;,ISCHANGED(Setup_Complete_Date__c ), IF( NOT(ISBLANK(PRIORVALUE(Setup_Complete_Date__c ))), true, IF(NOT(Setup_Complete_Date__c = TODAY()), true, false) ))</errorConditionFormula>
    <errorMessage>You must enter today&apos;s date in Setup Complete Date field. 
Once a date has been entered, it cannot be changed.</errorMessage>
</ValidationRule>