force-app/main/default/objects/Reference_S125_Onboarding__c/validationRules/Verified_EE_Detail_to_WEX_must_be_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Verified_EE_Detail_to_WEX_must_be_today</fullName>
    <active>true</active>
    <description>You must enter today&apos;s date in Verified EE Detail to WEX field. 
Once a date has been entered, it cannot be changed.</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt;&quot;2008-09 Operations Administration&quot;,ISCHANGED(Verified_EE_Detail_to_WEX__c ), IF( NOT(ISBLANK(PRIORVALUE(Verified_EE_Detail_to_WEX__c ))), true, IF(NOT(Verified_EE_Detail_to_WEX__c = TODAY()), true, false) ))</errorConditionFormula>
    <errorMessage>You must enter today&apos;s date in Verified EE Detail to WEX field. 
Once a date has been entered, it cannot be changed.</errorMessage>
</ValidationRule>