force-app/main/default/objects/Reference_S125_Onboarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Current_Step__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>